# WizardCardGame

./: .gitignore  Backend_guide.md  Frontend_guide.md  pnpm-lock.yaml
backend/: .env  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f3fc59c9eb9_initial_migration.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/api/routes/: __init__.py  games.py  players.py
backend/app/core/: bot_ai.py  config.py  database.py  db.py  game_logic.py
backend/app/crud/: crud.py
backend/app/models/: __init__.py  card.py  game.py  models.py  player.py  round.py
backend/app/schemas/: game.py  schemas.py
backend/migrations/: env.py
backend/tests/: test_api.py  test_game_logic.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/app/: globals.css
frontend/src/components/: BottomNav.tsx  TopBar.tsx  WizardCard.tsx
frontend/src/hooks/: useGame.ts  useGameActions.ts  useSound.ts
frontend/src/lib/: game.ts  liff.tsx
frontend/src/pages/: Arena.tsx  Lobby.tsx
frontend/src/services/: api.ts
frontend/src/store/: gameStore.ts  uiStore.ts
frontend/src/types/: card.ts  game.ts  player.ts
src/app/: layout.tsx  page.tsx
src/app/arena/: page.tsx
src/components/: BottomNav.tsx  TopBar.tsx  WizardCard.tsx
src/lib/: liff.tsx
wizard-game-client/: index.html  package-lock.json  package.json  pnpm-lock.yaml
wizard-game-client/src/: App.tsx
wizard-game-client/src/components/: Card.tsx  GameBoard.tsx
(+12 files in other folders)
